<resources>
    <string name="app_name">Hockey Score App</string>
    <string name="team_1_name">Team 1</string>
    <string name="team_1_score">0</string>
    <string name="team_2_name">Team 2</string>
    <string name="goal_button_text">Goal</string>
    <string name="blocked_button_text">Shot Blocked</string>
    <string name="missed_button_text">Shot Missed</string>
    <string name="team_2_score">10</string>
</resources>
