<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_weight="1">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/team_1_name"
                      android:id="@+id/team_1_textview"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/team_1_score"
                      android:id="@+id/team_1_score"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_button_text"
                    android:layout_gravity="center"
                    android:id="@+id/Team_1_goal_button"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blocked_button_text"
                    android:layout_gravity="center"
                    android:id="@+id/Team_1_blocked_button"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/missed_button_text"
                    android:layout_gravity="center"
                    android:id="@+id/Team_1_missed_button"/>

        </LinearLayout>

        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_weight="1">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/team_2_name"
                      android:id="@+id/team_2_textview"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/team_2_score"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_button_text"
                    android:layout_gravity="center"
                    android:id="@+id/team_2_goal_button"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blocked_button_text"
                    android:layout_gravity="center"
                    android:id="@+id/team_2_blocked_button"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/missed_button_text"
                    android:layout_gravity="center"
                    android:id="@+id/team_2_missed_button"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
